# ludora-discovery

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-21-mexico-boardgame-store-collector.md  2026-05-25-discovery-operations-api.md  2026-05-25-product-detail-crawler-v1.md  2026-05-25-sitemap-catalog-discovery-classification.md  2026-05-26-bgg-metadata-schema.md  2026-05-28-automated-item-offer-import.md
scripts/: collect_boardgame_stores_mx.py  cover_asset_workflow.py  extract_cover.py
src/ludora/: __init__.py  admin_matching.py  api.py  bgg.py  brave.py  browser_fetch.py  cli.py  collector.py  config.py  cover_asset_workflow.py  cover_extraction.py  database.py  embeddings.py  enrichment.py  export.py  filtering.py  inventory.py  item_classification.py  item_import.py  item_processing.py  listing_extraction.py  models.py  operations.py  product_crawler.py  product_detail_extraction.py  queries.py  sitemap_discovery.py  webfetch.py
tests/: test_admin_matching.py  test_api.py  test_bgg.py  test_bgg_import.py  test_brave.py  test_browser_fetch.py  test_cli.py  test_collector_persistence.py  test_config.py  test_cover_asset_workflow.py  test_cover_extraction.py  test_database.py  test_embeddings.py  test_enrichment.py  test_export.py  test_filtering.py  test_inventory.py  test_item_classification.py  test_item_processing.py  test_listing_candidate_model.py  test_listing_extraction.py  test_operations.py  test_product_detail_extraction.py  test_queries.py  test_schema.py  test_sitemap_discovery.py  test_webfetch.py
(+5 files in other folders)
